- fixed width/position of search input in warehouse list causing it to shrink on tablet size

--- a/src/components/WarehouseList/WarehouseList.scss
+++ b/src/components/WarehouseList/WarehouseList.scss
@@ -82,9 +82,9 @@
 
     @include tablet {
       padding: 0.5rem 1rem;
-      width: 24%;
-      position: relative;
-      left: 1rem;
+      // width: 24%;
+      // position: relative;
+      // left: 1rem;
     }
     @include desktop {
       padding: 0.5rem 1rem;
